--- a/trie/cpp/CMakeLists.txt
+++ b/trie/cpp/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required (VERSION 2.6)
 project (Trie)
 set(CMAKE_CXX_STANDARD 11)
-add_executable(word_counter src/word_counter.cpp)
+add_executable(word_counter word_counter.cpp)
